add link to C?? video

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <img src="time/thumbnail.png" class="thumbnail"></img>
             <p class="description">a programming language with time travel</p>
             </div>
-            <a class = "button">watch</a>
+            <a class = "button" href = "https://www.youtube.com/watch?v=B2X9_ss-toU">watch</a>
             <a class = "button" href = "time">play</a>
         </div>
     </div>
@@ -44,4 +44,5 @@
         </div>
     </div>
 </body>
+
 </html>
